--- a/resources/public/main.css
+++ b/resources/public/main.css
@@ -22,17 +22,27 @@ a {
     @apply focus:tw-shadow-none;
 }
 
-.hf-invalid-input {
+[aria-invalid="true"] {
     text-decoration: underline wavy red;
+    border-bottom: 2px red dotted;
+    margin-bottom: -2px;
+    display:inline-block;
+    position:relative;
 }
 
-.hf-edn-view-close-braket{
-    /* color: rgba(0, 0, 0, 0.25); */
+[contenteditable]{
+    white-space: pre-wrap;
 }
-
 [contenteditable="true"] {
-    /* background-color: rgba(0, 128, 128, 0.25); */
+    background-color: rgba(0, 128, 128, 0.1);
+    padding: 0.1rem 0.25rem;
+    margin: 0.1rem 0.25rem;
+    min-width: 1rem;
+    display: inline-block;
 }
-[contenteditable="false"]{
-    /* background-color: rgba(255, 0, 0, 0.15); */
+[contenteditable="true"]:empty::before{
+    content: attr(placeholder);
+    color: gray;
+    font-size: 0.9rem;
 }
+
