--- a/resources/public/examples/card.css
+++ b/resources/public/examples/card.css
@@ -1,5 +1,5 @@
 body{
-    margin: 30vh 0 50vh 0;
+    margin: 2rem 0 5rem 0;
     color: rgb(31, 41, 55);
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 16px;
