--- a/resources/public/hfql.css
+++ b/resources/public/hfql.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+
+body{
+    font-family: 'Open Sans', Arial, Verdana, sans-serif;
+    font-size: 0.8rem;
+}
+
 form {
     display: grid;
     grid-gap: 0.5rem;
@@ -7,7 +14,7 @@ form {
 
 form .field{
     display:grid;
-    border-left-width: 0.3rem;
+    border-left-width: 0rem;
     border-left-style: solid;
     padding-left: 0.5rem;
     padding-bottom: 0.5rem;
@@ -18,17 +25,51 @@ form .field:last-child{
     padding-bottom: 0;
 }
 
+form .field > label{
+    font-size: 1rem;
+    /* font-weight: 600; */
+}
+
 label{
     font-weight: 500;
 }
+
 table{
-    table-layout:fixed;
+    display: inline-table;
+    table-layout: fixed;
     border-collapse: collapse;
+    /* border: 1px solid; */
 }
 th {
-    border-width: 1px;
+    border-width: 0px;
+    border-left-width: 1px;
     border-style: solid;
+    font-weight: 500;
+    font-size: 1rem;
+    border-color: white;
+    font-size: 1.1em;
+    padding: 0.35rem;
 }
+
+th:first-child{
+    display: block;
+    border-left-width: 0;
+    border-top-left-radius: 2px;
+    margin-left: -0.5px;
+}
+
+th:last-child{
+    border-top-right-radius: 2px;
+    display: block;
+    margin-right: -1px;
+    border-right-width: 1px;
+}
+
+/* Select last th if there’s only tow columns */
+th:first-child:nth-last-child(2) ~ th:last-child { 
+    display: table-cell;
+}
+
 td{
     vertical-align: top;
     padding: 0.3rem;
@@ -36,11 +77,20 @@ td{
     border-style: solid;
 }
 
+thead td:empty{
+    visibility:hidden;
+    border: none;
+}
+
 input:not([type="radio"]){
     box-sizing: border-box;
     /* width:100%; */
-    border-left-width: 0.3rem;
+    border-width: 1px;
+    border-left-width: 0.2rem;
     border-style:solid;
+    border-radius: 2px;
+    padding: 0.5rem 0.5rem;
+    width: 100%;
 }
 
 .inputs{
@@ -54,5 +104,38 @@ fieldset.hf-options {
     display:grid;
     width: fit-content;
     grid-gap: 0.5rem;
-
+    border-radius: 3px;
+    border: 1px gray solid;
 }
+
+fieldset.hf-options th:nth-child(2){
+    display: block;
+    margin: 0 -1px;
+    box-sizing: content-box;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+}
+
+/* .grid{ */
+/*     display: grid; */
+/*     box-sizing: border-box; */
+/*     grid-auto-flow: row; */
+/*     border: 1px solid; */
+/* } */
+
+/* .grid th, .grid td { */
+/*     display: block; */
+/*     box-sizing: content-box; */
+/* } */
+
+/* .grid th { */
+/*     border-width: 0; */
+/*     border-right: 1px white solid; */
+/* } */
+
+/* .grid td { */
+/*     border-width: 0; */
+/*     /\* border-left-width: 1px ; *\/ */
+/*     border-bottom-width: 1px ; */
+/* } */
+
