--- a/resources/public/browser.css
+++ b/resources/public/browser.css
@@ -33,6 +33,12 @@ body {
     display: block;
 }
 
+#main[data-ws-failed="true"]::before{
+    display: block;
+    content: 'Websocket failed to reconnect. Please refresh.';
+    background-color: rgb(248 113 113); /* bg-red-400 */
+}
+
 .browser {
     position: relative;
     width: 90vw;
