--- a/resources/public/photon_ui.css
+++ b/resources/public/photon_ui.css
@@ -2,13 +2,13 @@ button[aria-disabled=true], input[type="button"][aria-disabled="true"]{
     color: GrayText;
 }
 
-button[aria-busy=true]{
+button[aria-busy=true], input[type=checkbox][aria-busy=true]{
     cursor:wait;
     position: relative;
 }
 
 /* Button spinner */
-button[aria-busy=true]::before{
+button[aria-busy=true]::before,  input[type=checkbox][aria-busy=true]::before{
     content:"";
     position:absolute;
     width: 0.9em;
