demos - todomvc whitespace and css for tweet

--- a/resources/public/todomvc.css
+++ b/resources/public/todomvc.css
@@ -4,6 +4,12 @@ body {
 	padding: 0;
 }
 
+div#root {
+	width: 65vw;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 button {
 	margin: 0;
 	padding: 0;
