--- a/resources/public/todomvc.css
+++ b/resources/public/todomvc.css
@@ -45,7 +45,7 @@ input[type="checkbox"] {
   outline: none;
 }
 
-#todoapp {
+.todoapp {
 	background: #fff;
 	background: rgba(255, 255, 255, 0.9);
 	margin: 130px 0 40px 0;
@@ -57,7 +57,7 @@ input[type="checkbox"] {
 				0 25px 50px 0 rgba(0, 0, 0, 0.15);
 }
 
-#todoapp:before {
+.todoapp:before {
 	content: '';
 	border-left: 1px solid #f5d6d6;
 	border-right: 1px solid #f5d6d6;
@@ -68,16 +68,16 @@ input[type="checkbox"] {
 	height: 100%;
 }
 
-#todoapp input::-webkit-input-placeholder {
+.todoapp input::-webkit-input-placeholder {
 	font-style: italic;
 }
 
-#todoapp input::-moz-placeholder {
+.todoapp input::-moz-placeholder {
 	font-style: italic;
 	color: #a9a9a9;
 }
 
-#todoapp h1 {
+.todoapp h1 {
 	position: absolute;
 	top: -120px;
 	width: 100%;
@@ -94,12 +94,12 @@ input[type="checkbox"] {
 	text-rendering: optimizeLegibility;
 }
 
-#header {
+.header {
 	padding-top: 15px;
 	border-radius: inherit;
 }
 
-#header:before {
+.header:before {
 	content: '';
 	position: absolute;
 	top: 0;
@@ -117,7 +117,7 @@ input[type="checkbox"] {
 	border-top-right-radius: 1px;
 }
 
-#new-todo,
+.todoapp input.new-todo,
 .edit {
 	position: relative;
 	margin: 0;
@@ -142,7 +142,7 @@ input[type="checkbox"] {
 	font-smoothing: antialiased;
 }
 
-#new-todo {
+.todoapp input.new-todo { /* override hfql input styles with more specific selector on input */
 	padding: 16px 16px 16px 60px;
 	border: none;
 	background: rgba(0, 0, 0, 0.02);
@@ -150,7 +150,7 @@ input[type="checkbox"] {
 	box-shadow: none;
 }
 
-#main {
+.main {
 	position: relative;
 	z-index: 2;
 	border-top: 1px dotted #adadad;
@@ -160,7 +160,7 @@ label[for='toggle-all'] {
 	display: none;
 }
 
-#toggle-all {
+.toggle-all {
 	position: absolute;
 	top: -42px;
 	left: -4px;
@@ -170,50 +170,50 @@ label[for='toggle-all'] {
 	border: none;
 }
 
-#toggle-all:before {
+.toggle-all:before {
 	content: '»';
 	font-size: 28px;
 	color: #d9d9d9;
 	padding: 0 25px 7px;
 }
 
-#toggle-all:checked:before {
+.toggle-all:checked:before {
 	color: #737373;
 }
 
-#todo-list {
+.todo-list {
 	margin: 0;
 	padding: 0;
 	list-style: none;
 }
 
-#todo-list li {
+.todo-list li {
 	position: relative;
 	font-size: 24px;
 	border-bottom: 1px dotted #ccc;
 }
 
-#todo-list li:last-child {
+.todo-list li:last-child {
 	border-bottom: none;
 }
 
-#todo-list li.editing {
+.todo-list li.editing {
 	border-bottom: none;
 	padding: 0;
 }
 
-#todo-list li.editing .edit {
+.todo-list li.editing .edit {
 	display: block;
 	width: 506px;
 	padding: 13px 17px 12px 17px;
 	margin: 0 0 0 43px;
 }
 
-#todo-list li.editing .view {
+.todo-list li.editing .view {
 	display: none;
 }
 
-#todo-list li .toggle {
+.todo-list li .toggle {
 	text-align: center;
 	width: 40px;
 	/* auto, since non-WebKit browsers doesn't support input styling */
@@ -230,7 +230,7 @@ label[for='toggle-all'] {
 	appearance: none;
 }
 
-#todo-list li .toggle:before {
+.todo-list li .toggle:before {
 	content: '✔';
 	/* 40 + a couple of pixels visual adjustment */
 	line-height: 43px;
@@ -239,14 +239,14 @@ label[for='toggle-all'] {
 	text-shadow: 0 -1px 0 #bfbfbf;
 }
 
-#todo-list li .toggle:checked:before {
+.todo-list li .toggle:checked:before {
 	color: #85ada7;
 	text-shadow: 0 1px 0 #669991;
 	bottom: 1px;
 	position: relative;
 }
 
-#todo-list li label {
+.todo-list li label {
 	white-space: pre;
 	word-break: break-word;
 	padding: 15px 60px 15px 15px;
@@ -257,12 +257,12 @@ label[for='toggle-all'] {
 	transition: color 0.4s;
 }
 
-#todo-list li.completed label {
+.todo-list li.completed label {
 	color: #a9a9a9;
 	text-decoration: line-through;
 }
 
-#todo-list li .destroy {
+.todo-list li .destroy {
 	display: none;
 	position: absolute;
 	top: 0;
@@ -277,7 +277,7 @@ label[for='toggle-all'] {
 	transition: all 0.2s;
 }
 
-#todo-list li .destroy:hover {
+.todo-list li .destroy:hover {
 	text-shadow: 0 0 1px #000,
 				 0 0 10px rgba(199, 107, 107, 0.8);
 	-webkit-transform: scale(1.3);
@@ -285,24 +285,24 @@ label[for='toggle-all'] {
 	transform: scale(1.3);
 }
 
-#todo-list li .destroy:after {
+.todo-list li .destroy:after {
 	content: '✖';
 }
 
-#todo-list li:hover .destroy
-, #todo-list .destroy[aria-busy=true] {
+.todo-list li:hover .destroy
+, .todo-list .destroy[aria-busy=true] {
 	display: block;
 }
 
-#todo-list li .edit {
+.todo-list li .edit {
 	display: none;
 }
 
-#todo-list li.editing:last-child {
+.todo-list li.editing:last-child {
 	margin-bottom: -1px;
 }
 
-#footer {
+.footer {
 	color: #777;
 	padding: 0 15px;
 	position: absolute;
@@ -314,7 +314,7 @@ label[for='toggle-all'] {
 	text-align: center;
 }
 
-#footer:before {
+.footer:before {
 	content: '';
 	position: absolute;
 	right: 0;
@@ -329,12 +329,12 @@ label[for='toggle-all'] {
 				0 44px 2px -6px rgba(0, 0, 0, 0.2);
 }
 
-#todo-count {
+.todo-count {
 	float: left;
 	text-align: left;
 }
 
-#filters {
+.filters {
 	margin: 0;
 	padding: 0;
 	list-style: none;
@@ -343,21 +343,21 @@ label[for='toggle-all'] {
 	left: 0;
 }
 
-#filters li {
+.filters li {
 	display: inline;
 }
 
-#filters li a {
+.filters li a {
 	color: #83756f;
 	margin: 2px;
 	text-decoration: none;
 }
 
-#filters li a.selected {
+.filters li a.selected {
 	font-weight: bold;
 }
 
-#clear-completed {
+.clear-completed {
 	float: right;
 	position: relative;
 	line-height: 20px;
@@ -369,12 +369,12 @@ label[for='toggle-all'] {
 	box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.2);
 }
 
-#clear-completed:hover {
+.clear-completed:hover {
 	background: rgba(0, 0, 0, 0.15);
 	box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.3);
 }
 
-#info {
+.info {
 	margin: 65px auto 0;
 	color: #a6a6a6;
 	font-size: 12px;
@@ -382,7 +382,7 @@ label[for='toggle-all'] {
 	text-align: center;
 }
 
-#info a {
+.info a {
 	color: inherit;
 }
 
@@ -392,16 +392,16 @@ label[for='toggle-all'] {
 */
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
-	#toggle-all,
-	#todo-list li .toggle {
+	.toggle-all,
+	.todo-list li .toggle {
 		background: none;
 	}
 
-	#todo-list li .toggle {
+	.todo-list li .toggle {
 		height: 40px;
 	}
 
-	#toggle-all {
+	.toggle-all {
 		top: -56px;
 		left: -15px;
 		width: 65px;
