demo explorer - generalize to datafy/nav protocols

--- a/resources/public/index.css
+++ b/resources/public/index.css
@@ -4,3 +4,4 @@
 @import url('photon.css');
 @import url('photon_ui.css');
 @import url('hfql.css');
+/*@import url('user_demo_explorer.css'); -- mount in the demo */
