--- a/resources/public/user_demo_explorer.css
+++ b/resources/public/user_demo_explorer.css
@@ -1,4 +1,7 @@
-.photon-demo-explorer tr:nth-child(even) { background-color: #f2f2f2; }
-.photon-demo-explorer td { padding-left: 3px; padding-right: 3px; }
-.photon-demo-explorer .title { font-size: 1.5em; }
 .photon-demo-explorer { width: 50vw; margin-left: auto; margin-right: auto; }
+.photon-demo-explorer .title { font-size: 1.5em; }
+.photon-demo-explorer table > tbody > tr:nth-child(even) { background-color: #f2f2f2; }
+.photon-demo-explorer table > tbody > tr:hover { background-color: #ddd; }
+.photon-demo-explorer table > tbody > tr > td { padding-left: 3px; padding-right: 3px; white-space: nowrap;}
+.photon-demo-explorer table > thead > td { text-decoration: underline; }
+/*.photon-demo-explorer table > tbody > .no-results { text-align: center; }*/
