--- a/resources/public/user_demo_explorer.css
+++ b/resources/public/user_demo_explorer.css
@@ -12,4 +12,4 @@
 .photon-demo-explorer > [role=grid] > [role=columnheader] { text-decoration: underline; }
 .photon-demo-explorer > [role=grid] > [role=group]:nth-child(even) > div { background-color: #f2f2f2; > }
 .photon-demo-explorer > [role=grid] > [role=group]:hover > div { background-color: #ddd; }
-.photon-demo-explorer > [role=grid] > [role=group] > [role=gridcell] { white-space: nowrap;}
+.photon-demo-explorer > [role=grid] > [role=group] > [role=gridcell] { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
