demo - datomic browser css pass

--- a/resources/public/user_demo_explorer.css
+++ b/resources/public/user_demo_explorer.css
@@ -1,5 +1,5 @@
 .photon-demo-explorer { width: 80vw; margin-left: auto; margin-right: auto; }
-.photon-demo-explorer .title { font-size: 1.5em; }
+.photon-demo-explorer .hyperfiddle-explorer-title { font-size: 1.5em; }
 
 /*.photon-demo-explorer table > thead > td { text-decoration: underline; }*/
 /*.photon-demo-explorer table > tbody > tr:nth-child(even) { background-color: #f2f2f2; }*/
