--- a/resources/public/body.css
+++ b/resources/public/body.css
@@ -14,7 +14,7 @@ body {
     background-color: rgb(248 250 252);
     display: flex;
     /* justify-content : center; */
-    padding: 5vh 0vw;
+    /*padding: 5vh 0vw;*/
 }
 
 ol ol,
