--- a/resources/public/user_demo_explorer.css
+++ b/resources/public/user_demo_explorer.css
@@ -9,6 +9,45 @@
 /*.photon-demo-explorer table > tbody > .no-results { text-align: center; }*/
 
 .photon-demo-explorer > [role=grid] > [role=columnheader] { white-space: nowrap; overflow-x: clip; text-overflow: ellipsis; }
-.photon-demo-explorer > [role=grid] > [role=group]:nth-child(even) > div { background-color: #f2f2f2; > }
-.photon-demo-explorer > [role=grid] > [role=group]:hover > div { background-color: #ddd; }
-.photon-demo-explorer > [role=grid] > [role=group] > [role=gridcell] { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+.photon-demo-explorer > [role=grid] > [role=group]:nth-child(even) > div {
+    /* background-color: #f2f2f2; */
+}
+.photon-demo-explorer > [role=grid] > div {	background-color: rgb(249 250 251);}
+.photon-demo-explorer > [role=grid] > [role=gridcell] {
+    white-space: nowrap;
+    overflow: hidden;
+    border: 0.5px lightgray solid;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    width: auto;
+    display: inline-box;
+}
+
+.photon-demo-explorer > [role=grid] > [role=gridcell]:hover ,
+.photon-demo-explorer > [role=grid] > [role=gridcell]:focus-within {
+    overflow: visible;
+    position: relative;
+    z-index: 1;
+}
+
+.photon-demo-explorer > [role=grid] > [role=gridcell] > span {
+    display: block;
+    position: relative;
+    min-width:100%;
+}
+
+.photon-demo-explorer > [role=grid] > [role=gridcell]:hover > *,
+.photon-demo-explorer > [role=grid] > [role=gridcell]:focus-within > *
+{
+    z-index: 2;
+    position: fixed;
+    min-width: fit-content;
+    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    /* box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1); */
+    /* box-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05); */
+    /* box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1); */
+	  /* box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25); */
+    background-color: inherit;
+    padding-right: 0.5rem;
+}
