--- a/resources/public/user_demo_explorer.css
+++ b/resources/public/user_demo_explorer.css
@@ -41,13 +41,8 @@
 .photon-demo-explorer > [role=grid] > [role=gridcell]:focus-within > *
 {
     z-index: 2;
-    position: fixed;
-    min-width: fit-content;
+    position: absolute;
+    width: fit-content;
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-    /* box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1); */
-    /* box-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05); */
-    /* box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1); */
-	  /* box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25); */
     background-color: inherit;
-    padding-right: 0.5rem;
 }
